<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/canvasSV"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/canvasRL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:background="@drawable/login_background">

        <!-- Most important group of views goes in last to avoid being overlapped by other less important views -->

        <!-- Bottom section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Powered by"
                android:textColor="#bfe7f3" />

            <ImageView
                android:layout_width="@dimen/login_opensrp_logo_width"
                android:layout_height="@dimen/login_opensrp_logo_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_opensrp_logo" />
        </LinearLayout>

        <!-- Top section -->
        <LinearLayout
            android:id="@+id/logoCanvasLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="@dimen/login_opensrp_logo_width"
                android:layout_height="@dimen/login_logo_height"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/growplusopeninglogo"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/login_build"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="#bfe7f3" />
        </LinearLayout>

        <!-- Middle section -->
        <LinearLayout
            android:id="@+id/credentialsCanvasLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/login_horizontal_margin"
            android:paddingRight="@dimen/login_horizontal_margin">

            <EditText
                android:id="@+id/login_userNameText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edittext"
                android:ems="10"
                android:hint="@string/userNameEditText"
                android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bfbfbf"
                android:typeface="sans" />

            <EditText
                android:id="@+id/login_passwordText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="8"
                android:background="@drawable/rounded_corner_edittext"
                android:ems="10"
                android:hint="@string/passwordEditText"
                android:inputType="textPassword"

                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bfbfbf"
                android:typeface="sans"/>

            <Button
                android:id="@+id/login_loginButton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="right|top"
                android:layout_marginTop="25dp"
                android:layout_weight="8"
                android:background="@drawable/login_button"
                android:ems="10"
                android:onClick="login"
                android:shadowColor="#ffffff"
                android:shadowDx="0"
                android:shadowDy="1"
                android:shadowRadius="0.5"
                android:text="@string/login_text"
                android:textColor="#666666"
                android:textSize="20sp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>